chore: Add a maven goal to launch Eclipse sandbox